--- a/composer.json
+++ b/composer.json
@@ -24,11 +24,14 @@
             "php": "7.1"
         }
     },
+    "repositories": [
+       {
+           "type": "git",
+           "url": "https://github.com/QoboLtd/cakephp-file-storage.git"
+       }
+   ],
     "require": {
-        "cakephp/cakephp": "^3.5 <3.7",
-        "cakephp/migrations": "^1.7",
-        "myclabs/php-enum": "^1.5",
-        "pyrech/composer-changelogs": "^1.4"
+        "qobo/cakephp-utils": "^11.0"
     },
     "require-dev": {
         "qobo/cakephp-composer-dev": "^v1.0"
@@ -59,5 +62,6 @@
         "test": "Runs phpcs and phpunit without coverage",
         "test-coverage": "Runs phpcs and phpunit with coverage enabled"
     },
-    "prefer-stable": true
+    "prefer-stable": true,
+    "minimum-stability": "dev"
 }
