--- a/composer.json
+++ b/composer.json
@@ -31,6 +31,7 @@
        }
    ],
     "require": {
+        "abraham/twitteroauth": "^1.0",
         "qobo/cakephp-utils": "^11.1"
     },
     "require-dev": {
