--- a/composer.json
+++ b/composer.json
@@ -24,15 +24,9 @@
             "php": "7.1"
         }
     },
-    "repositories": [
-       {
-           "type": "git",
-           "url": "https://github.com/QoboLtd/cakephp-file-storage.git"
-       }
-   ],
     "require": {
         "abraham/twitteroauth": "^1.0",
-        "qobo/cakephp-utils": "^13.0"
+        "qobo/cakephp-utils": "dev-cakephp-v38a"
     },
     "require-dev": {
         "qobo/cakephp-composer-dev": "^v1.0"
@@ -63,6 +57,5 @@
         "test": "Runs phpcs and phpunit without coverage",
         "test-coverage": "Runs phpcs and phpunit with coverage enabled"
     },
-    "prefer-stable": true,
-    "minimum-stability": "dev"
+    "prefer-stable": true
 }
